--- a/kalender/templates/card_schedule.html
+++ b/kalender/templates/card_schedule.html
@@ -1,10 +1,14 @@
 <div class="bg-[#282828] rounded-lg p-5 shadow-md flex items-center justify-between" id="schedule-card-{{ jadwal.id }}">
   <div class="flex items-center justify-between w-full">
     <div class="flex items-center gap-4">
+      
+      {% if user.is_superuser %}
       <a href="{% url 'kalender:edit_schedule' pk=jadwal.id %}" class="edit-btn bg-black hover:bg-gray-800 text-white text-sm px-5 py-2 rounded-md border border-white transition">
         Edit
       </a>
-      <div class="flex items-center gap-3 ml-10">
+      {% endif %}
+
+      <div class="flex items-center gap-3 {% if user.is_superuser %}ml-10{% endif %}">
         <span class="font-bold text-lg text-white">{{ jadwal.team_1 }}</span>
         {% if jadwal.team_1_logo %}
           <img src="{{ jadwal.team_1_logo }}" alt="{{ jadwal.team_1 }} logo" class="w-12 h-12 rounded-full object-cover">
@@ -19,7 +23,7 @@
     </div>
 
     <div class="flex items-center gap-4">
-      <div class="flex items-center gap-3 mr-10">
+      <div class="flex items-center gap-3 {% if user.is_superuser %}mr-10{% endif %}">
         {% if jadwal.team_2_logo %}
           <img src="{{ jadwal.team_2_logo }}" alt="{{ jadwal.team_2 }} logo" class="w-12 h-12 rounded-full object-cover">
         {% else %}
@@ -27,9 +31,12 @@
         {% endif %}
         <span class="font-bold text-lg text-white">{{ jadwal.team_2 }}</span>
       </div>
+
+      {% if user.is_superuser %}
       <button data-id="{{ jadwal.id }}" class="delete-btn bg-black hover:bg-gray-800 text-white text-sm px-5 py-2 rounded-md border border-white transition">
         Delete
       </button>
+      {% endif %}
     </div>
   </div>
 </div>
