--- a/highlight/templates/highlight_main.html
+++ b/highlight/templates/highlight_main.html
@@ -6,13 +6,13 @@
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-2">
 
     {% if user.is_authenticated and user.is_staff %}
-    <a href="{% url 'highlight:add_highlight' %}" class="inline-flex items-center px-4 py-2 bg-gray text-gray-600 font-semibold outline outline-2 outline-gray-600 outline-offset-[-2px] rounded-md hover:bg-gray-600 hover:text-white transition-colors mb-4">
+    <a href="{% url 'highlight:add_highlight' %}" class="inline-flex items-center px-4 py-2 bg-gray text-gray-300 font-semibold outline outline-2 outline-gray-300 outline-offset-[-2px] rounded-md hover:bg-gray-600 hover:text-white transition-colors mb-4">
       Add Highlight
     </a>
     {% endif %}
 
    <!-- Search and Filter Section -->
-    <div class="mb-8 bg-gray rounded-lg border border-gray-200 p-4">
+    <div class="mb-8 bg-gray rounded-lg border border-gray-700 p-4">
       <form method="GET" action="{% url 'highlight:show_main_page' %}" class="flex items-center gap-4">
         
         <!-- Search Input -->
@@ -27,7 +27,7 @@
               type="text"
               name="q"
               value="{{ request.GET.q }}"
-              class="block w-full pl-10 pr-3 py-2 border border-gray-300 rounded-md leading-5 bg-gray text-black placeholder-gray-500 focus:outline-none focus:placeholder-gray-400 focus:ring-1 focus:ring-gray-500 focus:border-gray-500 sm:text-sm" {% comment %} <-- Added text-black here {% endcomment %}
+              class="block w-full pl-10 pr-3 py-2 border border-gray-700 rounded-md leading-5 bg-gray-800 text-gray-100 placeholder-gray-500 focus:outline-none focus:placeholder-gray-400 focus:ring-1 focus:ring-gray-500 focus:border-gray-500 sm:text-sm"
               placeholder="Search highlights by name..."
             >
         </div>
